--- a/css/landing.css
+++ b/css/landing.css
@@ -12,6 +12,7 @@
   --background-gradient: linear-gradient(#edf9ff, #cbffff);
 }
 
+
 h1,
 h2,
 h3,
@@ -30,6 +31,9 @@ body {
   background: var(--background-color);
   box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.3);
   margin-bottom: 80vh;
+}
+p{
+  font-weight: 400;
 }
 html {
   color: var(--black);
@@ -374,6 +378,13 @@ pre {
   }
   100% {
     opacity: 1;
+  }
+}
+
+@media (max-width: 763px) {
+  .landing-container  .scroll-down {
+
+    margin-right: 10%;
   }
 }
 .scroll-down:hover {
@@ -807,8 +818,8 @@ pre {
   font-family: "Source Sans Pro", sans-serif;
   margin: 0 auto;
   margin-top: 1rem;
-  width: 90%;
-  max-width: 15rem;
+  width: 25rem;
+  max-width: 90vw;
   display: block;
   border: var(--orange) solid 0.25rem;
   border-radius: 0.15rem;
